--- a/css/style8.css
+++ b/css/style8.css
@@ -81,6 +81,7 @@
 .container.overlay-open {
 	-webkit-transform: scale(0.8);
 	transform: scale(0.8);
+    z-index: 9999;
 }
 
 .overlay-contentscale {
@@ -89,6 +90,7 @@
 	transform: translateY(100%);
 	-webkit-transition: -webkit-transform 0.5s, visibility 0s 0.5s;
 	transition: transform 0.5s, visibility 0s 0.5s;
+     z-index: 9999;
 }
 
 .overlay-contentscale.open {
@@ -97,6 +99,7 @@
 	transform: translateY(0%);
 	-webkit-transition: -webkit-transform 0.5s;
 	transition: transform 0.5s;
+     z-index: 9999;
 }
 
 @media screen and (max-height: 30.5em) {
